Make StaticPropLumpReader more resilient against invalid data